Fixed form alignment

--- a/HW1/PHP/index.html
+++ b/HW1/PHP/index.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <label>Gender</label><br>
-                <input type="radio" name="gender" value="male" style="margin-right: 0" >Male<br>
-                <input type="radio" name="gender" value="female" style="margin-right: 0">Female
+                <input type="radio" name="gender" value="male">Male<br>
+                <input type="radio" name="gender" value="female">Female
             </div>
             <div>
                 <label>Preferred Operating System</label><br>
