- Checkbox now has only one selection - PHP style guide examples URL added

--- a/HW1/PHP/index.html
+++ b/HW1/PHP/index.html
@@ -34,13 +34,8 @@
                 <input type="radio" name="gender" value="female">Female
             </div>
             <div>
-                <label>Preferred Operating System</label><br>
-                <input type="checkbox" name="Linux" value="Linux">Linux<br>
-                <input type="checkbox" name="Windows" value="WinOS">Windows<br>
-                <input type="checkbox" name="Macintosh" value="MacOS">Macintosh<br>
-                <input type="checkbox" name="Android" value="Android">Android<br>
-                <input type="checkbox" name="iOS" value="iOS">iOS<br>
-                <input type="checkbox" name="Other" value="Other">Other<br>
+                <label>Confirm that you are a student in CMPE 226</label><br>
+                <input type="checkbox" name="Enrolled" value="Enrolled">Confirm<br>
             </div>
             <div>
                 <input type="submit" value="Add User" class="btn btn-primary"/>
