--- a/HW1/index.html
+++ b/HW1/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Foreign Keys - HW1</title>
-    <link href='public_html/css/main.css' rel='stylesheet' type='text/css'>
+    <link href='static/css/main.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <form action="public_html/users.php"
+    <form action="users.php"
           method="post">
         <fieldset>
             <legend>User form</legend>
