- Changed the checkbox text - Added new column in database - Moved PHP files into PHP folder - Fixed the CSS file relative path - tested on XAMPP for these changes

--- a/HW1/index.html
+++ b/HW1/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form action="users.php"
+    <form action="PHP/users.php"
           method="post">
         <fieldset>
             <legend>User form</legend>
@@ -37,8 +37,8 @@
             </div>
             <div>
                 <div class="checkbox-options">
-                    <input type="checkbox" name="Enrolled" value="Enrolled">
-                    <label>Are you a student in CMPE 226?</label>
+                    <input type="checkbox" name="subscribed" value="yes">
+                    <label>Subscribe to the newsletter</label>
                 </div>
             </div>
             <div>
